# webds_sensor_mapping

./: .gitignore  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
schema/: plugin.json
src/: axis.tsx  bankingScheme.tsx  constant.ts  context.tsx  icons.ts  import  index.ts  steps.tsx  widget.tsx  widgetContent.tsx  widgetControl.tsx  widgetSensor.tsx  wifi.tsx  wrapper.tsx
src/widget/: SensorMappingComponent.tsx  SensorMappingWidget.tsx  bankingScheme.tsx  constant.ts  steps.tsx  widgetContent.tsx  widgetControl.tsx  widgetSensor.tsx
